@@ -214,9 +214,6 @@ date_format=%Y-%m-%d
 time_format=%H:%M GMT
 use_gmt=1
 quotes_per_page=10
-top_quotes=10
-bottom_quotes=10
-random_quotes=10
 recent_news_items=3
 webapp.webmaster_name=John Doe
 webapp.webmaster_email=you@yourserver.com
