@@ -7,6 +7,9 @@
 * Added on-the-fly gzip compression to Chirpy::UI::WebApp--webapp.enable_gzip=1
   in your configuration file enables it
 * Added optional captcha image to Chirpy::UI::WebApp's quote submission page
+* Made top and bottom quotes browsable
+* Made ui.quotes_per_page apply to random, top and bottom quotes instead of
+  individual setting per page type
 * Made Atom 1.0 feed valid by adding feed ID and webmaster name. Webmaster name
   must be configured as webapp.webmaster_name
 * Added quote_count method to Chirpy::DataManager and APPROVED_QUOTE_COUNT,
